--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ urls:
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: profile.png
-author: Jongmin Lee
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
+author: Victormin
+author_bio: DB 전문가로 성장하고 싶은 이종민 입니다.
 author_email: "ljmne88@gmail.com"
 author_location: South Korea
 #author_website_url: "https://sujaykundu.com"
