--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: profile.png
+author_logo: 2018387.jpg
 author: Victormin
 author_bio: DB 전문가로 성장하고 싶은 이종민 입니다.
 author_email: "ljmne88@gmail.com"
